# rivet

./: .env.dev  .env.prod  .gitignore  Cargo.toml  Makefile  PROJECT_AUDIT.md  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/cli/src/output/: console.rs  formatters.rs  mod.rs  progress.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  engine.rs  error.rs  lib.rs
crates/core/src/http/: client.rs  mod.rs  request_builder.rs
crates/core/src/parsers/: mod.rs
crates/core/src/parsers/config/: loader.rs  mod.rs  models.rs  validator.rs
crates/core/src/parsers/response/: extractor.rs  json_path.rs  mod.rs
crates/core/src/template/: engine.rs  mod.rs
crates/core/src/templates/: manager.rs  mod.rs  models.rs  repository.rs
crates/core/src/templates/builtin/: auth.yaml
crates/gui/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.js
crates/gui/capabilities/: default.json
crates/gui/icons/: icon.icns
crates/gui/src/: App.svelte  main.ts
crates/gui/src-tauri/src/: main.rs
crates/gui/src/components/: Header.svelte  Results.svelte  Sidebar.svelte  StageItem.svelte
crates/gui/src/lib/: api.ts
examples/: demo.yaml
scripts/: dev.sh  quick-test.sh  release.sh
