[package]
name = "rivet-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API testing GUI"

[[bin]]
name = "rivet-gui"
path = "src-tauri/src/main.rs"

[package.metadata.tauri]
config-path = "tauri.conf.json"  # Теперь в корне

[dependencies]
rivet-core = { path = "../core" }
tauri = { version = "2.0", features = [
    "native-tls",
    "tray-icon",
    "webview-data-url",
] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
dev-console = []
